--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 				<li>Tranining</li>
 					<p><a href = "OS-backup_update.html">MAC Enviroment</a></>
 					<p><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></>
+					<p><a href = "wazuh.html">wazuh.html</a></>
+					<p><a href = "suricata_centos8.html">suricata_centos8.html</a></>
 					
 			    	<li>Template</li>
 					<p><a href = "NinoX Template ver 0.5.ppt">NinoX PowerPoint </a>
