--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<p><a href = "wazuh.html">wazuh.html</a></>
 					<p><a href = "suricata_centos8.html">suricata_centos8.html</a></>
 					<p><a href = "CentOSExterenel.html">CentOS7Exterenel.html</a></>
-					<p><a href = "Debian9Externel.html">Debian9Externel.html</a></>
+					<p><a href = "Debian9Externel.html">DebianExternel.html</a></>
 					
 			    	<li>Template</li>
 					<p><a href = "NinoX Template ver 0.5.ppt">NinoX PowerPoint </a>
