--- a/DebianExternel.html
+++ b/DebianExternel.html
@@ -660,6 +660,7 @@ Figure 7.1: 新增 PXA2xx 模組
 <span id="cb15-20"><a href="#cb15-20" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb15-21"><a href="#cb15-21" aria-hidden="true" tabindex="-1"></a><span class="co"># 安裝桌面環境</span></span>
 <span id="cb15-22"><a href="#cb15-22" aria-hidden="true" tabindex="-1"></a>apt<span class="sc">-</span>get install pantheon</span></code></pre></div>
+<p>若中途跳出視窗詢問要使用哪個 display manager，選擇預設的 gdm3</p>
 <p>若要切換桌面環境，在登入畫面點選設定，就可以選擇要執行的桌面環境</p>
 </div>
 <div id="參考資料" class="section level1" number="10">
