--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p><a href = "DebianExternel.html">DebianExternel.html</a></>
 					
 			    	<li>Template</li>
-					<p><a href = "NinoX Template ver 0.5.ppt">NinoX PowerPoint </a>
+					<p><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a>
 					<p><a href = "NinoX_Kanban-Board_Template.xlsx">NinoX_Kanban-Board </a>
 
 			</ul>  
