modify html portal

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 					<p><a href = "JavaSpringMicroservice.html">Java_Spring_Microservice_p1.html</a></>
 					<p><a href = "network.html">iiidevops_install.html</a></>
 				        <p><a href = "Tekton_CI-CD_d1.html">tekton_argocd_pipeline_setup.html</a></>
+					<p><a href = "Tekton_CI-CD_d2.html">tekton_argocd_pipeline_setup2.html</a></>
 					<p><a href = "wazuh.html">wazuh.html</a></>
 					<p><a href = "suricata_centos8.html">suricata_centos8.html</a></>
 					<p><a href = "CentOSExterenel.html">CentOS7Exterenel.html</a></>
