--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 					<p><a href = "CentOSExterenel.html">CentOS7Exterenel.html</a></>
 					<p><a href = "DebianExternel.html">DebianExternel.html</a></>  
 					<p><a href = "bpfCO-RE.html">bpfCO-RE.html</a></>
+					<p><a href = "BPF CO-RE ppt new ver 0.5.pptx">BPF CO-RE ppt new ver 0.5.pptx</a></>
 					
 			    	<li>Template</li>
 					<p><a href = "NinoX Template ver 0.7.ppt">NinoX PowerPoint ver 0.7 </a>
