--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>NinoX Portal</title>
 	<link href="demo.css" rel="stylesheet" media="all">
+	<link href="table.css" rel="stylesheet" media="all">
 </head>
 	
 
